# website

./: .gitignore  Meetings.hs  README.md  contacts.html  index.html  pow.html  preview.sh  site.hs  ysuacm.cabal
css/: main.css
templates/: archive.html  default.html  events.html
