name:               ysuacm
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable ysuacm
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.7.*
                  , pandoc
                  , containers
                  , thyme
                  , old-locale
                  , data-default
                  , lens
                  , text
                  , aeson
                  , transformers
  ghc-options:      -threaded
  default-language: Haskell2010
